Name:                Game-Wrappers
Version:             0.1
Description:         Collection of wrappers for use in game dev
Category:            Game Engine
License:             BSD3
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

library
    hs-source-dirs:    src/
    ghc-options:       -Wall -Werror -threaded -rtsopts=all -fllvm
    exposed-modules:   Wrappers.OpenGL Wrappers.GLFW Wrappers.Events Wrappers.STM
    extensions:        FlexibleInstances, TupleSections, TemplateHaskell, GeneralizedNewtypeDeriving, NoImplicitPrelude,
                       BangPatterns, ExistentialQuantification, MultiParamTypeClasses, FlexibleContexts,
                       UndecidableInstances, ScopedTypeVariables, IncoherentInstances

    build-depends: 
                    OpenGL,
                    GLFW-b,
                    stm,
                    tuple,
                    Step ==0.7,
                    QuickCheck >= 2,
                    base >= 4.5,
                    base < 5.0

test-suite Tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: test/
                    src/
    main-is:        Test.hs
    ghc-options:    -Wall -Werror
    extensions:     FlexibleInstances, TupleSections, TemplateHaskell, GeneralizedNewtypeDeriving, NoImplicitPrelude,
                    BangPatterns, ExistentialQuantification, MultiParamTypeClasses, FlexibleContexts,
                    UndecidableInstances, ScopedTypeVariables, IncoherentInstances

    build-depends: 
                    QuickCheck >= 2,
                    HUnit,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    test-framework-th,
                    test-framework,
                    Step ==0.7,
                    Cabal,
                    base >= 4.5,
                    base < 5.0
