Name:                game-wrappers
Version:             0.5.0
Synopsis:            Collection of library wrappers intended for use in game dev
Description:         This library is a wrapper for several other libraries,
                     with design decisions made with intent to favor game developers.

                     Feedback, help, pull requests, etc. are welcome!
Category:            Game Engine
License:             MIT
Author:              Ben Foppa
Stability:           Experimental; no guarantees.
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

library
    hs-source-dirs:    src/
    ghc-options:       -Wall -threaded -rtsopts=all
    exposed-modules:
                      Wrappers.OpenGL
                      Wrappers.GLFW
                      Wrappers.Events

    build-depends: 
                    OpenGL,
                    GLFW-b == 1.4.*,
                    stm == 2.4.*,
                    tuple,
                    StateVar,
                    QuickCheck >= 2,
                    base >= 4.5,
                    base < 4.8

source-repository head
  type: git
  location: https://github.com/RobotGymnast/game-wrappers
